# openbridge

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
examples/: openai_chat_completions.py  openai_responses.py
src/openbridge/: __init__.py  __main__.py  cli.py  config.py  keys.py  store.py
src/openbridge/oauth/: __init__.py  browser.py  device.py  pkce.py  tokens.py
src/openbridge/server/: app.py  auth.py  convert.py  normalize.py  proxy.py  routes.py
